tests/tooling/fixtures/native/execution/negative/parameter_bool_nullability_suffix_unsupported.objc3
module ParameterBoolNullabilitySuffixUnsupported;

fn pick(flag: bool?, left: i32, right: i32) -> i32 {
  if (flag) {
    return left;
  }
  return right;
}

fn main() -> i32 {
  return pick(true, 1, 0);
}
